[project]
name = "linearb-mcp"
version = "1.2.0"
description = "Read-only Model Context Protocol server for LinearB API with comprehensive discovery service"
readme = "README.md"
requires-python = ">=3.10"
authors = [
    {name = "LinearB MCP Team", email = "support@example.com"}
]
license = {text = "MIT"}
keywords = ["mcp", "linearb", "api", "devops", "metrics", "discovery"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: System :: Monitoring",
]

dependencies = [
    "fastmcp>=2.5.1",
    "httpx>=0.28.1",
    "mcp[cli]>=1.9.1",
    "python-dotenv>=1.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
    "black>=23.0.0",
    "isort>=5.12.0",
    "mypy>=1.0.0",
    "pre-commit>=3.0.0",
]

[project.urls]
Homepage = "https://github.com/example/linearb-mcp"
Documentation = "https://github.com/example/linearb-mcp#readme"
Repository = "https://github.com/example/linearb-mcp.git"
Issues = "https://github.com/example/linearb-mcp/issues"

[project.scripts]
linearb-mcp = "server:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.black]
line-length = 100
target-version = ['py310']

[tool.isort]
profile = "black"
line_length = 100

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
disallow_untyped_decorators = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
warn_unreachable = true
strict_equality = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
